service.yaml
apiVersion: v1
kind: Service
metadata:
  name: biblio-service
spec:
  selector:
    app: bibliotheque
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: NodePort
